Aug 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Apply brightness correction to mapshots

Aug 17, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix usage of AC_ARG_ENABLE (#1010440). Thanks Mike Frysinger for reporting.

Aug 16, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix quickfilter not working when pressing backspace or delete in the empty
  textentry (thanks Ruediger Meier for spotting this one).
- add new tray icons from Jochen Baier
- set version to 1.0.0.1

Aug 15, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix compile with gcc 2.95 (patch by Thomas Zajic)
- Fix --add when one server without type is specified whose port matches
  exactly one game.

Aug 15, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- released 1.0

Aug 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Use TGA loader from quake2 if gdk-pixbuf fails to load a mapshot. Useful for
  at least Q3, RTCW, ET and Doom3 mapshots.
- require qstat version 2.6

Aug 13, 2004: Jordi Mallach <jordi@sindominio.net>
- update Catalan and Spanish translations
- fix Makevar so intltool works ok
- remove updateonepo, use intltool-update instead.

Aug 13, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- Doom 3 rcon support

Aug 12, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- properly detect installed Doom 3 maps. No preview though since gdk-pixbuf
  doesn't support the TGA format used by id :-(

Aug 09, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- remove some obsolete stuff from docu, update list of supported games

Aug 07, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- initial Doom 3 support

Aug 01, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- support multiple words in quick filter (AND)
- update German translation

Jul 24, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- new feature: quick filter

Jul 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- do not set fs_game if mod is a 'main mod'

Jul 14, 2004: Ludwig Nussel <l-n@users.sourceforge.net>