@@ -27,7 +27,7 @@ gametype CODM new extend Q3M
     name = Call of Duty Master
     default port = 20510
     template var = CODMASTER
-    master protocol = 1
+    master protocol = 5
     master for gametype = CODS
     master query = full empty
 end
