@@ -1,3 +1,6 @@
+Aug 22, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- Set default master protocol version for COD to 5
+
 Aug 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - Apply brightness correction to mapshots
 
